# PeacockSpider

./: .gitignore  CMakeLists.txt  PeacockSpider.kdev4
cmake/: FindCPPUNIT.cmake
engine/: CMakeLists.txt  abdada_pvs_searcher.cpp  abdada_searcher.cpp  abdada_searcher_base.cpp  abdada_single_pvs_searcher.cpp  abdada_single_searcher.cpp  abdada_single_searcher_base.cpp  board.cpp  can_move.cpp  chess.cpp  chess.hpp  consts.hpp  default_eval_params.cpp  engine.cpp  engine.hpp  eval.cpp  eval.hpp  eval_fun.cpp  exception.cpp  exception.hpp  game.cpp  game.hpp  lazy_smp_pvs_searcher.cpp  lazy_smp_searcher.cpp  lazy_smp_searcher_base.cpp  lazy_smp_single_pvs_searcher.cpp  lazy_smp_single_searcher.cpp  move.cpp  move_order.cpp  move_pair_list.cpp  pgn.cpp  protocols.cpp  protocols.hpp  pv_line.cpp  san_move.cpp  search.hpp  searcher.cpp  single_pvs_searcher.cpp  single_pvs_searcher_with_tt.cpp  single_searcher.cpp  (+14 more)
genalg/: CMakeLists.txt  crossover.cpp  default_gene_ranges.cpp  default_gene_ranges.hpp  duplication.cpp  fitness.hpp  fitness_fun.cpp  gen_alg.cpp  gen_alg.hpp  gen_alg_io.cpp  gen_alg_iter.cpp  gen_alg_sig.cpp  gen_alg_sig.hpp  gen_alg_vars.cpp  gen_alg_vars.hpp  generation.cpp  generator.cpp  generator.hpp  mutation.cpp  parallel_tournament.cpp  range.hpp  roulette_wheel_selector.cpp  selector.cpp  single_table.cpp  single_tournament.cpp  table.cpp  tournament.cpp  tournament.hpp  tournament_io.cpp  tournament_result.cpp
peacockspider/: CMakeLists.txt  main.cpp
peacockspiderga/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/engine/: CMakeLists.txt  abdada_pvs_searcher_tests.cpp  abdada_pvs_searcher_tests.hpp  abdada_searcher_tests.cpp  abdada_searcher_tests.hpp  board_tests.cpp  board_tests.hpp  can_move_tests.cpp  can_move_tests.hpp  chess_tests.cpp  chess_tests.hpp  eval_tests.cpp  eval_tests.hpp  lazy_smp_pvs_searcher_tests.cpp  lazy_smp_pvs_searcher_tests.hpp  lazy_smp_searcher_tests.cpp  lazy_smp_searcher_tests.hpp  main.cpp  move_pair_list_tests.cpp  move_pair_list_tests.hpp  move_tests.cpp  move_tests.hpp  pgn_tests.cpp  pgn_tests.hpp  san_move_tests.cpp  san_move_tests.hpp  searcher_tests.cpp  searcher_tests.hpp  single_pvs_searcher_tests.cpp  single_pvs_searcher_tests.hpp  single_pvs_searcher_with_tt_tests.cpp  single_pvs_searcher_with_tt_tests.hpp  single_searcher_tests.cpp  single_searcher_tests.hpp  single_searcher_with_tt_tests.cpp  single_searcher_with_tt_tests.hpp  thinker_tests.cpp  thinker_tests.hpp  transpos_table_tests.cpp  transpos_table_tests.hpp
test/genalg/: CMakeLists.txt  crossover_tests.cpp  crossover_tests.hpp  duplication_tests.cpp  duplication_tests.hpp  gen_alg_iter_tests.cpp  gen_alg_iter_tests.hpp  generation_tests.cpp  generation_tests.hpp  main.cpp  mutation_tests.cpp  mutation_tests.hpp  parallel_tournament_tests.cpp  parallel_tournament_tests.hpp  roulette_wheel_selector_tests.cpp  roulette_wheel_selector_tests.hpp  selector_tests.cpp  selector_tests.hpp  single_tournament_tests.cpp  single_tournament_tests.hpp  test_gene_ranges.cpp  test_gene_ranges.hpp  test_table.cpp  test_table.hpp  tournament_tests.cpp  tournament_tests.hpp
